--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1056,11 +1056,11 @@ section {
 /*--------------------------------------------------------------
 # Competitive Debate Programs
 --------------------------------------------------------------*/
-.teach-us-debate {
+.teach-us-debate-ph {
   background: url("../img/competitive-debate/p-23.jpg") center center no-repeat;
   background-size: cover;
 }
-.teach-us-debate {
+.teach-us-debate-ca {
   background: url("../img/competitive-debate/p-25.jpg") center center no-repeat;
   background-size: cover;
 }
@@ -1074,6 +1074,9 @@ section {
 }
 .why-us-content, .exam-early-learn-content {
   padding: 9%;
+}
+.harvard {
+  width: 60%;
 }
 /*--------------------------------------------------------------
 # Academic Enrichment
@@ -1294,22 +1297,51 @@ MEDIA SCREEN
     margin: 0px !important;
     font-size: 20px;
   }
+  .redbird-program .mcgrawhill-img {
+    width: 80%;
+    height: 55vh;
+  }
 }
 
 @media screen and (max-width: 1024px) {
-  .py-5 {
+  body {
+    font-size: 16px;
+  }
+  .my-5 {
+    margin-top: 2rem!important;
+    margin-bottom: 2rem!important;
+  }
+  .m-5 {
+    margin: 2rem!important;
+  }
+  .mt-5 {
+    margin-top: 2rem!important;
+  }
+  .mb-5 {
+    margin-bottom: 2rem!important;
+  }
+  .pt-5 {
+    padding-top: 2rem!important;
+  }
+  .px-lg-5, .px-5 {
     padding-right: 2rem!important;
     padding-left: 2rem!important;
   }
-  .px-lg-5 {
-    padding-right: 2rem!important;
-    padding-left: 2rem!important;
+  .py-5 {
+    padding-top: 2rem!important;
+    padding-bottom: 2rem!important;
+  }
+  .custom-badge span {
+    padding: 10px 35px;
+  }
+  #topbar {
+    padding: 0px !important;
   }
   #topbar .contact-info i a, #topbar .contact-info i span {
-    font-size: 12px;
+    font-size: 13px;
   }
   .navbar a, .navbar a:focus {
-    font-size: 10px;
+    font-size: 11px;
     padding: 10px 0 10px 20px;
   }
   #header .logo img {
@@ -1323,7 +1355,7 @@ MEDIA SCREEN
   }
   .banner-wrap .text-content {
     position: relative;
-    transform: translate(23%, -200%);
+    transform: translate(23%, -222%);
     left: 0px;
     text-align: center;
   }
@@ -1339,6 +1371,9 @@ MEDIA SCREEN
   }
   .academic-subject-tutoring .tutor-img {
     width: 100%;
+  }
+  section {
+    padding: 90px 0px !important;
   }
   section .competitive-debate-programs, div .container {
     width: 100% !important;
@@ -1373,10 +1408,10 @@ MEDIA SCREEN
     font-size: 80px;
   }
   .ourCourses .box h5 {
-    font-size: 15px;
+    font-size: 13px;
   }
   .title-size {
-    padding: 1rem 2rem !important;
+    padding: 0rem 2rem !important
   }
   .title-size h1 {
     font-size: 30px;
@@ -1391,18 +1426,20 @@ MEDIA SCREEN
   .why-it-works .circle-container {
     width: 38%;
   }
-  .why-us-content, .why-take-exam-content, .exam-early-learn-content  {
+  .why-take-exam {
+    margin: 0 !important;
+    padding: 0 !important;
+  }
+  .why-us-content, .why-take-exam-content, .exam-early-learn-content, .reaching-goal-content  {
     padding: 2%;
   }
   .why-take-exam-content .light-btn {
     width: 100%;
   }
-  section {
-    padding: 35px 0px !important;
-  }
   .redbird-program .mcgrawhill-img {
     width: 100%;
     height: 50vh;
+    padding: 0 !important;
   }
   .section-container .ap-img {
     width: 50% !important;
@@ -1413,11 +1450,17 @@ MEDIA SCREEN
   .children {
     height: 100%;
   }
+  .more-btn {
+    padding: 1% 60px;
+  }
 }
 
 @media screen and (max-width: 768px) {
+  body {
+    font-size: 15px;
+  }
   .banner-wrap .text-content {
-    transform: translate(0%, -120%);
+    transform: translate(0%, -162%);
   }
   .banner-wrap .text-content p {
     font-size: 20px !important;
@@ -1442,7 +1485,7 @@ MEDIA SCREEN
     font-size: 11px;
   }
   .navbar a, .navbar a:focus {
-    font-size: 14px;
+    font-size: 15px;
     padding: 10px 0 10px 30px;
   }
   .navbar a i, .navbar a:focus i {
@@ -1457,6 +1500,9 @@ MEDIA SCREEN
   }
   #footer .footer-top .footer-contact p img {
     width: 95%;
+  }
+  section {
+    padding: 70px 0px !important;
   }
   section.our-program-structure h5 .row,
   section.university-school-counselling .row{
@@ -1476,11 +1522,78 @@ MEDIA SCREEN
   .swiper-wrapper .swiper-slide .banner-wrap {
     max-height: 40vh;
   }
-  .about .video-box {
-    min-height: 325px;
+  .counter .number {
+    font-size: 65px !important;
+  } 
+  .welcome-opus-container-fluid {
+    padding: 8% 10px !important;
   }
-  .container-fluid .secondary-bg, .p-5 {
+  .welcome-opus-container {
+    margin: 0 !important;
+  }
+  .why-choose-opus-container .row, .team-and-expert-container .row, .counter-container .row, .competitve-debate .row {
+    margin: 25px 0 !important;
+  }
+  .img-banner {
+    display: flex;
+  }
+  .ourCourses .box {
+    margin: 10px 0px;
+  }
+  .more-btn {
+    padding: 2% 80px;
+  }
+  .ourCourses .box h5 {
+    font-size: 15px;
+  }
+  .title-size h1 {
+    padding-top: 25px !important;
+    padding-bottom: 0 !important;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+    font-size: 25px;
+  }
+  .title-size h4{
+    padding: 10px 0px !important;
+    font-size: 16px;
+  }
+  .bi-chevron-compact-down {
+    font-size: 3rem;
+  }
+  .redbird-program .mcgrawhill-img {
+    height: 35vh;
     padding: 0 !important;
+  }
+  .harvard {
+    width: 100%;
+  }
+  .button-container {
+    margin: 0 !important;
+  }
+  .register-fall-btn, .courses-sched-btn, .apply-summer-btn {
+    padding: 5% !important;
+  }
+  .application-process .circle-container {
+    width: 35%;
+  }
+  .why-it-works .circle-container {
+    width: 45%;
+  }
+  .our-counselling-services .circle-container {
+    width: 100%;
+  }
+  .our-counselling-services .circle-container img {
+    padding: 1rem !important;
+  }
+  .our-counselling-services .icon-text {
+    font-size: 16px !important;
+  }
+  .fs-1{
+    font-size: 25px !important;
+  }
+  .what-we-offer .icon-box h4 {
+    font-size: 20px;
+    margin-bottom: 20px !important;
   }
 }
 
@@ -1599,6 +1712,7 @@ MEDIA SCREEN
   section.breadcrumbs {
     margin-top: 0;
     margin-bottom: 20px;
+    padding: 20px 0 !important;
   }
   section {
     padding: 30px 0 !important;
@@ -1615,9 +1729,6 @@ MEDIA SCREEN
   #main img {
     width: 100% !important;
     margin-bottom: 20px !important;
-  }
-  section.breadcrumbs {
-    padding: 20px 0 !important;
   }
   .breadcrumbs h2 {
     font-size: 19px;
