--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -845,8 +845,11 @@ section {
 }
 
 /*--------------------------------------------------------------
-# About
+# University and Graduate
 --------------------------------------------------------------*/
+.university-graduates .box {
+  box-shadow: 0px 2px 15px rgb(0 0 0 / 25%);
+}
 /*--------------------------------------------------------------
 # History and Team
 --------------------------------------------------------------*/
@@ -1078,6 +1081,11 @@ section {
 .harvard {
   width: 60%;
 }
+.teach-us-debate-ph .box,
+.teach-us-debate-ca .box{
+  box-shadow: 0px 2px 15px rgb(0 0 0 / 25%);
+}
+
 /*--------------------------------------------------------------
 # Academic Enrichment
 --------------------------------------------------------------*/
@@ -1092,7 +1100,7 @@ section {
   background: url("../img/classical-music/piano-bg.jpg") center center no-repeat;
   background-size: cover;
 }
-.classical-music .circle-container {
+.how-to-apply .circle-container {
   background-color: #0d6efd;
   border-radius: 50%;
   display: inline-block;
@@ -1701,8 +1709,8 @@ MEDIA SCREEN
     height: auto;
   }
   #main img {
-    width: 100% !important;
-    margin-bottom: 20px !important;
+    width: 100%;
+    margin-bottom: 20px;
   }
   section {
     padding: 45px 0;
@@ -1743,8 +1751,8 @@ MEDIA SCREEN
     padding: 20px 0 !important
   }
   #main img {
-    width: 100% !important;
-    margin-bottom: 20px !important;
+    width: 100%;
+    margin-bottom: 20px;
   }
   .breadcrumbs h2 {
     font-size: 19px;
@@ -1759,11 +1767,381 @@ MEDIA SCREEN
 }
 
 @media screen and (max-width: 320px) {
+  section.communicationArts, .certificate-and-diploma, .public-speaking, .certificate-and-diploma-grant, .interview-skills-program, .youth-lead-program, .international-relations, .awards-and-honor, .container, .our-expert-content, .reaching-goal-container {
+    padding-left: 7%;
+    padding-right: 7%;
+  }
+  .teach-us-debate-ca, .competitve-debate, 
+  .teach-us-debate-ph, .application-process, 
+  .redbird-program, .use-redbird, .why-it-works, 
+  .we-help-students, .teaching-method, 
+  .classical-music, .how-to-apply, .us-debate-style-bg, .our-expert-teacher,
+  .reaching-goals, .our-counselling-services,
+  .entrance-exams, .knowledge-admission,
+  .university-graduates, .life-long-impact, .your-exams-content,
+  .reaching-your-goals, .summer-camp-registration, .team {
+    padding: 25px 0% !important;
+  }
+  .why-take-exam-content, .why-us-content, .exam-early-learn-content {
+    padding: 10%;
+  }
+  .warning-bg img, .danger-bg img, .primary-bg img {
+    display: none;
+  }
+  p,
+  .banner-wrap .text-content p,
+  .testimonials .testimonial-item p {
+    font-size: 15px !important;
+  }
+  .application-process .circle-container,
+  .why-it-works .circle-container,
+  .how-to-apply .circle-container,
+  .our-counselling-services .circle-container {
+    width: 25%;
+    margin-bottom: 5px !important;
+  }
+  .px-lg-5, .px-5 {
+    padding: 0!important;
+  }
+  .mt-5, .m-5{
+    margin: 0 !important;
+  }
+  .mb-5 {
+    margin-bottom: 1rem !important;
+  }
+  .pe-5, .p-3 {
+    padding: 0px !important;
+  }
+  .row {
+    padding: 0 !important;
+    margin: 0 !important;
+  }
+  section {
+    padding: 15px 3% !important;
+  }
+  section.breadcrumbs {
+    margin-bottom: 0px;
+  }
+  section.breadcrumbs ol li {
+    font-size: 13px;
+    padding-left: 0px;
+  }
+  section.breadcrumbs ol {
+    padding-bottom: 5px;
+  }
+  .breadcrumbs ol li + li::before {
+    padding-right: 5px;
+  }
+  .title-size {
+    padding: 0rem 1rem !important;
+  }
+  .title-size h1 {
+    padding-top: 20px !important
+  }
+  .title-size h4 {
+    padding: 5px 0px !important;
+  }
+  .section-title {
+    padding-bottom: 0px;
+  }
+  .section-container .spacing {
+    padding: 15px 0;
+  }
+  .primary-bg p.fs-1 {
+    font-size: 20px !important;
+    margin-bottom: 0 !important;
+  }
+
+
+
+
+
+  #topbar .contact-info i span {
+    font-size: xx-small;
+  }
   .navbar a, .navbar a .primary-btn {
     font-size: 12px;
     padding: 8px 0 15px 19px;
   }
   #main img {
+    width: 100%;
+  }
+  .banner-wrap .text-content {
+    transform: translate(0%, -185%);
+    text-align: left;
+  }
+  .banner-wrap .banner-btn {
+    letter-spacing: 0;
+  }
+  .banner-wrap .inner {
+    left: 4%;
+  }
+  .banner-wrap .inner .text-content .d-flex {
+    justify-content: left !important;
+  }
+  .welcome-opus-container-fluid {
+    padding: 8% 0px !important;
+  }
+  .what-we-offer .container {
+    text-align: left !important;
+    padding: 5% !important;
+  }
+  .why-choose-opus .play-btn {
+    display: none !important;
+  }
+  .portfolio .container {
+    padding: 0 !important;
+  }
+
+
+
+
+  .ourCourses,
+  .section-container {
+    padding: 30px 0% !important;
+  }
+  .ourCourses .box {
+    margin: 5px 0px;
+    padding: 25px 10px;
+  }
+  .ourCourses .align-items-stretch {
+    padding: 0px !important;
+  }
+  .ourCourses .row>* {
+    padding-right: 0 !important;
+    padding-left: 0 !important;
+  }
+
+
+
+
+  .section-container .text-content {
+    padding: 1rem 0px;
+  }
+  .section-container .img {
+    margin: 0 !important;
+  }
+  .section-container .container img {
+    margin: 0px !important;
+  }
+  .section-container .text-content .custom-badge {
+    margin-top: 15px !important;
+  }
+  .certificate-container .cert-img {
+    margin-bottom: 5px !important;
+  }
+  .why-take-exam-content ul {
+    margin-bottom: 15px !important;
+  }
+
+
+  
+
+  .teach-us-debate-ca .public-forum-con, 
+  .teach-us-debate-ca .policy-debate-con,
+  .teach-us-debate-ph .public-speaking-con,
+  .teach-us-debate-ph .intensive-public-con {
+    padding: 0 !important;
+  }
+  .teach-us-debate-ca .public-forum-con, .public-speaking-con {
+    margin-bottom: 20px;
+  }
+  .teach-us-debate-ca .bg-light,
+  .teach-us-debate-ph .bg-light {
+    padding: 11% !important;
+  }
+  .section-container .danger-btn {
+    margin-bottom: 15px;
+  }
+  .application-process .col-md-4 {
+    margin: 15px 0;
+    padding: 0 !important;
+  }
+  .ca-btn-register, .ca-btn-courses {
+    width: fit-content !important;
+    padding: 0 !important;
+  }
+
+
+
+  .redbird-program .mcgrawhill-img {
+    height: 255px;
+  }
+  .redbird-program .justify-content-center {
+    padding: 0px;
+  }
+  .redbird-program .redbird-learn-more {
+    margin-top: 0px !important;
+  }
+
+
+
+  .we-help-students .section-title h2 {
+    margin-bottom: 0;
+  }
+  .we-help-students .img {
+    margin: 25px 0 !important;
+  }
+  .we-help-students .align-items-stretch {
+    margin-bottom: 25px;
+  }
+  .we-help-students .white-bg {
+    padding: 3rem 1.5rem;
+  }
+  .we-help-students .rounded h2 {
+    margin-bottom: 20px !important;
+  }
+  .we-help-students .rounded ul {
+    padding-left: 20px;
+    margin-bottom: 0;
+  }
+
+  
+
+
+  .exam-early-learn {
+    padding: 0 !important;
+  }
+
+
+
+
+  .classical-music .box img.w-75 {
     width: 100% !important;
   }
+  .section-container .private-piano-con, 
+  .section-container .music-theory-con {
+    padding: 1rem 0;
+  }
+  .section-container .btn-container .btn-div {
+    padding: 0;
+    margin-bottom: 10px;
+  }
+  .us-debate-style-bg .master-class-con,
+  .us-debate-style-bg .music-competitions-con,
+  .us-debate-style-bg .workshops-con {
+    padding: 0 !important;
+    margin-bottom: 20px;
+  }
+  .how-to-apply .apply-program {
+    margin-bottom: 50px;
+  }
+  .how-to-apply .col-md-4 {
+    margin: 15px 0;
+    padding: 0 !important;
+  }
+  .classical-music h4 {
+    font-size: 19px !important;
+  }
+  .ourCourses h5 {
+    margin-bottom: 0 !important;
+  }
+  .ourCourses .certificate-container .ap-img{
+    width: 50% !important;
+    margin-bottom: 10px !important;
+  }
+  .our-expert-content .col-md-4 {
+    padding: 0;
+  }
+  .our-expert-content h5 {
+    margin: 15px 0% !important;
+  }
+  .our-expert-content img {
+    margin: 15px 0%;
+  }
+  .our-expert-content a.read-testimonials-btn {
+    margin: 10px 0% !important;
+  }
+  .our-expert-teacher .alex-img {
+    margin: 0px !important;
+  }
+
+
+
+
+  .reaching-goal-content {
+    padding: 0px;
+  }
+  .our-counselling-services .circle-container img {
+    display: flex;
+    margin-bottom: 0px !important;
+  }
+  .our-counselling-services .our-counselling-btn {
+    width: 100%;
+  }
+  .entrance-exams .image-logo {
+    justify-content: center !important;
+    margin-bottom: 20px !important;
+  }
+  .entrance-exams .image-logo img {
+    width: 50% !important;
+    margin-bottom: 0px !important;
+  }
+
+
+
+
+
+  .our-counselling-services p.text-center {
+    margin: 0 !important;
+  }
+  .our-counselling-services .circle-container {
+    margin: 15px 0% !important;
+  }
+  .our-counselling-services .col-md-2 {
+    padding: 0 !important;
+    margin: 15px 0% !important;
+  }
+  .our-counselling-services .our-counselling-btn {
+    width: 100%;
+  }
+  .knowledge-admission .interview-img {
+    display: none;
+  }
+  .university-graduates .interview-confidence-con,
+  .university-graduates .present-best-con {
+    padding: 0px !important;
+    margin: 15px 0%;
+  }
+  .university-graduates .interview-confidence-con .box,
+  .university-graduates .present-best-con .box {
+    padding: 35px 12% !important;
+  }
+  .img-con {
+    display: none !important;
+  }
+  .list-of-schools {
+    padding-left: 20px !important;
+  }
+  .reaching-your-goals .my-5 {
+    margin: 0px !important;
+  }
+
+
+
+  .summercamps-learnmore {
+    width: 100% !important;
+  }
+  .summercamps-learnmore-container {
+    margin: 15px 0% !important;
+  }
+
+
+
+  .team .founder {
+    padding: 0px !important;
+  }
+
+
+
+  #footer .footer-contact {
+    margin-bottom: 30px;
+  }
+  #footer .footer-links {
+    margin-bottom: 20px;
+  }
+  #footer .footer-top {
+    padding: 40px 6%;
+  }
+
 }
