--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1144,6 +1144,13 @@ section {
 .teach-us-debate-ca .box{
   box-shadow: 0px 2px 15px rgb(0 0 0 / 25%);
 }
+.fa-solid{
+  color: #06bcc1;
+}
+.fa-regular{
+  color: #06bcc1;
+}
+
 
 /*--------------------------------------------------------------
 # Academic Enrichment
