--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1081,7 +1081,7 @@ section {
   position: relative;
   padding-bottom: 12px;
 }
-#footer .footer-top .footer-links {
+#footer .footer-top .footer-links, .footer-contact {
   margin-bottom: 30px;
 }
 #footer .footer-top .footer-links ul {
@@ -1252,7 +1252,7 @@ section {
   border-left: 5px solid #29176e;
   padding-left: 10px;
 }
-.testimonials-section .icon-boxes .icon-box {
+.testimonials-page-section .icon-boxes .icon-box {
   background: #fff;
   box-shadow: 0px 2px 20px rgb(0 0 0/ 10%);
   padding: 25px 30px;
@@ -1617,7 +1617,7 @@ MEDIA SCREEN
     margin: 10px 0px;
   }
   .more-btn {
-    padding: 2% 80px;
+    padding: 4% 80px;
   }
   .ourCourses .box h5 {
     font-size: 15px;
@@ -1752,7 +1752,7 @@ MEDIA SCREEN
   section.team .icon-boxes .icon-box {
     padding: 40px;
   }
-  section.testimonials-section #sidebar {
+  section.testimonials-page-section #sidebar {
     margin-top: 35px;
   }
   #admission-page-hero, #debate-programs-page-hero {
@@ -1784,7 +1784,7 @@ MEDIA SCREEN
 }
 
 @media screen and (max-width: 375px) {
-  .swiper-button-prev {
+  /* .swiper-button-prev {
     left: -30px;
   }
   .swiper-button-next {
@@ -1829,11 +1829,9 @@ MEDIA SCREEN
   }
   .section-title {
     padding-bottom: 20px;
-  }
-}
+  } */
 
-@media screen and (max-width: 320px) {
-  section.communicationArts, .certificate-and-diploma, 
+  .section.communicationArts, .certificate-and-diploma, 
   .public-speaking, .certificate-and-diploma-grant, 
   .interview-skills-program, .youth-lead-program, 
   .international-relations, .awards-and-honor, 
@@ -1853,8 +1851,291 @@ MEDIA SCREEN
   .university-graduates, .life-long-impact, 
   .your-exams-content, .reaching-your-goals, 
   .summer-camp-registration, .team, 
-  .partnership-slider, .history, .careers, .about-us-sec, 
-  .testimonials-section{
+  .partnership-slider, .history, .careers,
+  .what-we-offer, .why-choose-opus, .team-and-expert,
+  .counter, .portfolio {
+    padding: 30px 0% !important;
+  }
+  .why-take-exam-content, .why-us-content, .exam-early-learn-content {
+    padding: 45px;
+  }
+  .warning-bg img, .danger-bg img, .primary-bg img {
+    display: none;
+  }
+  p,
+  .banner-wrap .text-content p,
+  .testimonials .testimonial-item p {
+    font-size: 15px !important;
+  }
+  .application-process .circle-container,
+  .why-it-works .circle-container,
+  .how-to-apply .circle-container,
+  .our-counselling-services .circle-container {
+    width: 22%;
+    margin-bottom: 5px !important;
+  }
+  .px-lg-5, .px-5 {
+    padding: 0!important;
+  }
+  .mt-5, .m-5{
+    margin: 0 !important;
+  }
+  .pe-5, .p-3 {
+    padding: 0px !important;
+  }
+  .mb-5 {
+    margin-bottom: 1rem !important;
+  }
+  .row {
+    padding: 0 !important;
+    margin: 0px !important;
+  }
+  /* section {
+    padding: 15px 3% !important;
+  } */
+  section.breadcrumbs {
+    margin-bottom: 0px;
+    padding: 15px 0% !important;
+  }
+  section.breadcrumbs ol li {
+    font-size: 13px;
+    padding-left: 0px;
+  }
+  section.breadcrumbs ol {
+    padding-bottom: 5px;
+  }
+  .breadcrumbs ol li + li::before {
+    padding-right: 5px;
+  }
+   .breadcrumbs h2 {
+    margin: 0px;
+    font-size: 20px;
+    font-weight: 500;
+  }
+  /* .title-size {
+    padding: 0rem 1rem !important;
+  } */
+  .title-size h1 {
+    padding-top: 20px !important
+  }
+  .title-size h4 {
+    padding: 5px 0px !important;
+  }
+  .section-title {
+    padding-bottom: 0px;
+  }
+  .section-container .spacing {
+    padding: 15px 0;
+  }
+  .primary-bg p.fs-1 {
+    font-size: 20px !important;
+    margin-bottom: 0 !important;
+  }
+  .slider::before, .slider::after {
+    background: none;
+  }
+  .slider .slide-track {
+    width: calc(200px * 15);
+  }
+  .partnership-slider h4.slider-title {
+    font-weight: 500 !important;
+    font-size: 17px;
+    padding: 0px 5%;
+    margin: 0px;
+  }
+  .container-fluid {
+    padding-right: 0%;
+    padding-left: 0%;
+  }
+
+
+  
+  #topbar .contact-info i span {
+    font-size: xx-small;
+  }
+  .navbar a, .navbar a .primary-btn {
+    font-size: 12px;
+    padding: 8px 0 15px 19px;
+  }
+  #main img {
+    width: 100%;
+  }
+  .banner-wrap .text-content {
+    transform: translate(-4%, -195%);
+  }
+  .banner-wrap .banner-btn {
+    letter-spacing: 0;
+  }
+  .banner-wrap .inner {
+    left: 4%;
+  }
+  .welcome-opus-container-fluid {
+    padding: 8% 0px !important;
+  }
+  .what-we-offer .container {
+    text-align: left !important;
+    padding: 10px 5% !important;
+  }
+  .what-we-offer .col-xl-3 {
+    padding: 0;
+  }
+  .why-choose-opus .play-btn {
+    display: none !important;
+  }
+  .why-choose-opus .testimonials-btn-container, .why-choose-opus .achievements-btn-container {
+    margin: 0px 2% !important;
+  }
+  .portfolio .container {
+    padding: 0px 2% !important;
+  }
+  .portfolio .container .col {
+    flex: none;
+  }
+
+
+
+
+  .ourCourses,
+  .section-container {
+    padding: 30px 0% !important;
+  }
+  .ourCourses h2 {
+    margin-bottom: 25px;
+  }
+  .ourCourses .box {
+    margin: 5px 0;
+    padding: 25px 10px;
+  }
+  .ourCourses .align-items-stretch {
+    padding: 0 !important;
+  }
+  .ourCourses .row>* {
+    margin-bottom: 10px;
+  }
+
+
+
+
+  .section-container .text-content {
+    padding: 0;
+  }
+  .section-container .img {
+    margin: 0 !important;
+  }
+  /* .section-container .container img {
+    margin-bottom: 25px !important;
+  } */
+  .section-container .text-content .custom-badge {
+    margin-top: 20px !important;
+  }
+  .certificate-container .cert-img {
+    margin-bottom: 5px !important;
+  }
+  .why-take-exam-content ul {
+    margin-bottom: 15px !important;
+  }
+
+  .custom-badge span {
+    font-size: 13px;
+    padding: 7px 15px;
+  }
+
+
+
+  .teach-us-debate-ca .public-forum-con, 
+  .teach-us-debate-ca .policy-debate-con,
+  .teach-us-debate-ph .public-speaking-con,
+  .teach-us-debate-ph .intensive-public-con {
+    padding: 0 !important;
+  }
+  .teach-us-debate-ca .public-forum-con, .public-speaking-con {
+    margin-bottom: 20px;
+  }
+  .teach-us-debate-ca .bg-light,
+  .teach-us-debate-ph .bg-light {
+    padding: 11% !important;
+  }
+  .section-container .danger-btn {
+    margin-bottom: 15px;
+  }
+  .application-process .col-md-4 {
+    margin: 15px 0;
+    padding: 0 !important;
+  }
+  .ca-btn-register, .ca-btn-courses {
+    width: fit-content !important;
+    padding: 0 !important;
+  }
+  .school-partners-banner {
+    padding-top: 0 !important;
+    padding-bottom: 0 !important;
+  }
+  .school-partners-banner h4 {
+    margin: 40px 5%;
+  }
+
+
+
+  .redbird-program .justify-content-center {
+    padding: 0px;
+  }
+  .redbird-program .redbird-learn-more {
+    margin-top: 0px !important;
+  }
+
+
+
+  .learnmore-btn {
+    margin-top: 0px !important;
+    margin-bottom: 20px !important;
+  }
+
+
+
+  /* .we-help-students .section-title h2 {
+    margin-bottom: 0;
+  }
+  .we-help-students .img {
+    margin: 25px 0 !important;
+  }
+  .we-help-students .align-items-stretch {
+    margin-bottom: 25px;
+  }
+  .we-help-students .white-bg {
+    padding: 3rem 1.5rem;
+  }
+  .we-help-students .rounded h2 {
+    margin-bottom: 20px !important;
+  }
+  .we-help-students .rounded ul {
+    padding-left: 20px;
+    margin-bottom: 0;
+  } */
+
+}
+
+@media screen and (max-width: 320px) {
+  .section.communicationArts, .certificate-and-diploma, 
+  .public-speaking, .certificate-and-diploma-grant, 
+  .interview-skills-program, .youth-lead-program, 
+  .international-relations, .awards-and-honor, 
+  .container, .our-expert-content, 
+  .reaching-goal-container {
+    padding-left: 7%;
+    padding-right: 7%;
+  }
+  .teach-us-debate-ca, .competitve-debate, 
+  .teach-us-debate-ph, .application-process, 
+  .redbird-program, .use-redbird, .why-it-works, 
+  .we-help-students, .teaching-method, 
+  .classical-music, .how-to-apply, 
+  .we-teach-us-debate, .our-expert-teacher, 
+  .reaching-goals, .our-counselling-services,
+  .entrance-exams, .knowledge-admission,
+  .university-graduates, .life-long-impact, 
+  .your-exams-content, .reaching-your-goals, 
+  .summer-camp-registration, .team, 
+  .partnership-slider, .history, .careers {
     padding: 25px 0% !important;
   }
   .why-take-exam-content, .why-us-content, .exam-early-learn-content {
@@ -1876,7 +2157,7 @@ MEDIA SCREEN
     margin-bottom: 5px !important;
   }
   .px-lg-5, .px-5 {
-    padding: 0!important;
+    padding: 0px !important;
   }
   .mt-5, .m-5{
     margin: 0 !important;
@@ -1891,11 +2172,9 @@ MEDIA SCREEN
     padding: 0 !important;
     margin: 0 !important;
   }
-  section {
-    padding: 50px 3% !important;
-  }
   section.breadcrumbs {
     margin-bottom: 0px;
+    padding: 10px 0% !important;
   }
   section.breadcrumbs ol li {
     font-size: 13px;
@@ -1906,6 +2185,11 @@ MEDIA SCREEN
   }
   .breadcrumbs ol li + li::before {
     padding-right: 5px;
+  }
+  .breadcrumbs h2 {
+    font-size: 20px;
+    font-weight: 500;
+    margin: 0px;
   }
   .title-size {
     padding: 0rem 1rem !important;
@@ -1924,7 +2208,7 @@ MEDIA SCREEN
   }
   .primary-bg p.fs-1 {
     font-size: 20px !important;
-    line-height: 30px;
+    margin-bottom: 0 !important;
   }
   .slider::before, .slider::after {
     background: none;
@@ -1977,8 +2261,14 @@ MEDIA SCREEN
   .why-choose-opus .play-btn {
     display: none !important;
   }
+  .why-choose-opus .testimonials-btn-container, .why-choose-opus .achievements-btn-container {
+    margin: 0px 2% !important;
+  }
   .portfolio .container {
     padding: 0 !important;
+  }
+  .portfolio .container .col {
+    flex: none;
   }
 
 
@@ -2039,7 +2329,7 @@ MEDIA SCREEN
     padding: 11% !important;
   }
   .section-container .danger-btn {
-    margin-bottom: 15px;
+    margin-bottom: 0;
   }
   .application-process .col-md-4 {
     margin: 15px 0;
@@ -2049,6 +2339,14 @@ MEDIA SCREEN
     width: fit-content !important;
     padding: 0 !important;
   }
+  .school-partners-banner {
+    padding-top: 0 !important;
+    padding-bottom: 0 !important;
+  }
+  .school-partners-banner h4 {
+    margin: 35px 5%;
+  }
+  
 
 
   .redbird-program .mcgrawhill-img {
@@ -2083,13 +2381,11 @@ MEDIA SCREEN
     margin-bottom: 0;
   }
 
-  
 
 
   .exam-early-learn {
     padding: 0 !important;
   }
-
 
 
 
@@ -2174,7 +2470,6 @@ MEDIA SCREEN
 
 
 
-
   .our-counselling-services p.text-center {
     margin: 0 !important;
   }
@@ -2249,33 +2544,11 @@ MEDIA SCREEN
     display: none;
   }
   .btn-get-started {
-    margin: 0px 10%;
+    margin-left: 0px;
     border-radius: unset;
     letter-spacing: normal;
   }
 
-
-  .about-us-sec img {
-    width: 100% !important;
-    height: auto !important;
-    margin-bottom: 15px !important; 
-  }
-
-
-  .testimonial-content {
-    padding: 8px;
-  }
-  .testimonials-section .icon-boxes .icon-box {
-    padding: 25px 25px;
-  }
-  .testimonial-content .my-5 {
-    margin-top: 1rem!important;
-    margin-bottom: 1rem!important
-  }
-  section.testimonials-section #sidebar {
-    margin-top: 35px;
-    padding: 0;
-  }
 
 
   #footer .footer-contact {
